# ssmgr

./: README.md
client/: Cargo.toml
client/src/: api.rs  args.rs  main.rs  player.rs  state.rs  ui.rs
server/: Cargo.toml
server/src/: analyze.rs  api.rs  args.rs  main.rs  scanner.rs  state.rs
shared/: Cargo.toml
shared/src/: lib.rs
