[package]
name = "ssmgr-client"
version = "0.1.0"
edition = "2021"

[dependencies]
ssmgr-shared = { path = "../shared" }
ratatui = "0.29"
crossterm = "0.28"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rodio = { version = "0.19", features = ["symphonia-all"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
