[package]
name = "ssmgr-server"
version = "0.1.0"
edition = "2021"

[dependencies]
ssmgr-shared = { path = "../shared" }
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
symphonia = { version = "0.5", features = ["mp3", "flac", "ogg", "aac", "wav", "isomp4"] }
stratum-dsp = "1"
lofty = "0.20"
walkdir = "2"
sha2 = "0.10"
notify = "6"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
